--- a/requirements.txt
+++ b/requirements.txt
@@ -1,155 +1,153 @@
-Package                      Version   
----------------------------- --------- 
-absl-py                      1.2.0
-anyio                        3.6.1
-argon2-cffi                  21.3.0
-argon2-cffi-bindings         21.2.0
-asttokens                    2.0.5
-astunparse                   1.6.3
-async-generator              1.10
-attrs                        21.4.0
-Babel                        2.10.3
-backcall                     0.2.0
-beautifulsoup4               4.11.1
-bleach                       5.0.0
-cachetools                   5.2.0
-certifi                      2021.10.8
-cffi                         1.15.0
-charset-normalizer           2.0.12
-chromedriver                 2.24.1
-click                        8.1.3
-colorama                     0.4.4
-cryptography                 36.0.2
-debugpy                      1.6.0
-decorator                    5.1.1
-deepface                     0.0.75
-defusedxml                   0.7.1
-entrypoints                  0.4
-executing                    0.8.3
-fastjsonschema               2.15.3
-filelock                     3.7.1
-fire                         0.4.0
-Flask                        2.1.3
-Flask-WTF                    1.0.1
-flaskr                       1.0.0     
-flatbuffers                  1.12
-gast                         0.4.0
-gdown                        4.5.1
-google-auth                  2.9.1
-google-auth-oauthlib         0.4.6
-google-pasta                 0.2.0
-grpcio                       1.47.0
-h11                          0.13.0
-h5py                         3.7.0
-idna                         3.3
-ipykernel                    6.13.0
-ipython                      8.2.0
-ipython-genutils             0.2.0
-ipywidgets                   7.7.0
-itsdangerous                 2.1.2
-jedi                         0.18.1
-Jinja2                       3.1.1
-json5                        0.9.9
-jsonschema                   4.4.0
-jupyter                      1.0.0
-jupyter-client               7.2.2
-jupyter-console              6.4.3
-jupyter-core                 4.9.2
-jupyter-server               1.18.1
-jupyterlab                   3.4.4
-jupyterlab-pygments          0.2.0
-jupyterlab-server            2.15.0
-jupyterlab-widgets           1.1.0
-keras                        2.9.0
-Keras-Preprocessing          1.1.2
-libclang                     14.0.1
-Markdown                     3.4.1
-MarkupSafe                   2.1.1
-matplotlib-inline            0.1.3
-mistune                      0.8.4
-MouseInfo                    0.1.3
-mtcnn                        0.1.1
-nbclassic                    0.4.3
-nbclient                     0.5.13
-nbconvert                    6.5.0
-nbformat                     5.3.0
-nest-asyncio                 1.5.5
-notebook                     6.4.10
-notebook-shim                0.1.0
-numpy                        1.22.3
-oauthlib                     3.2.0
-opencv-python                4.5.5.64
-opt-einsum                   3.3.0
-outcome                      1.1.0
-packaging                    21.3
-pandas                       1.4.3
-pandocfilters                1.5.0
-parso                        0.8.3
-pickleshare                  0.7.5
-Pillow                       9.2.0
-pip                          22.0.4
-prometheus-client            0.14.1
-prompt-toolkit               3.0.29
-protobuf                     3.19.4
-psutil                       5.9.0
-pure-eval                    0.2.2
-pyasn1                       0.4.8
-pyasn1-modules               0.2.8
-PyAutoGUI                    0.9.53
-pycparser                    2.21
-PyGetWindow                  0.0.9
-Pygments                     2.11.2
-PyMsgBox                     1.0.9
-pyOpenSSL                    22.0.0
-pyparsing                    3.0.8
-pyperclip                    1.8.2
-PyRect                       0.2.0
-pyrsistent                   0.18.1
-PyScreeze                    0.1.28
-PySocks                      1.7.1
-python-dateutil              2.8.2
-pytweening                   1.0.4
-pytz                         2022.1
-pywin32                      303
-pywinpty                     2.0.5
-pyzmq                        22.3.0
-qtconsole                    5.3.0
-QtPy                         2.0.1
-requests                     2.27.1
-requests-oauthlib            1.3.1
-retina-face                  0.0.12
-rsa                          4.9
-selenium                     4.1.3
-Send2Trash                   1.8.0
-setuptools                   58.1.0
-six                          1.16.0
-sniffio                      1.2.0
-sortedcontainers             2.4.0
-soupsieve                    2.3.2
-stack-data                   0.2.0
-tensorboard                  2.9.1
-tensorboard-data-server      0.6.1
-tensorboard-plugin-wit       1.8.1
-tensorflow                   2.9.1
-tensorflow-estimator         2.9.0
-tensorflow-io-gcs-filesystem 0.26.0
-termcolor                    1.1.0
-terminado                    0.13.3
-tinycss2                     1.1.1
-tornado                      6.1
-tqdm                         4.64.0
-traitlets                    5.1.1
-trio                         0.20.0
-trio-websocket               0.9.2
-typing_extensions            4.3.0
-urllib3                      1.26.9
-wcwidth                      0.2.5
-webdriver-manager            3.5.4
-webencodings                 0.5.1
-websocket-client             1.3.3
-Werkzeug                     2.1.2
-wheel                        0.37.1
-widgetsnbextension           3.6.0
-wrapt                        1.14.1
-wsproto                      1.1.0
-WTForms                      3.0.1
+absl-py==1.2.0
+anyio==3.6.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+astunparse==1.6.3
+async-generator==1.10
+attrs==21.4.0
+Babel==2.10.3
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.0
+cachetools==5.2.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+chromedriver==2.24.1
+click==8.1.3
+colorama==0.4.4
+cryptography==36.0.2
+debugpy==1.6.0
+decorator==5.1.1
+deepface==0.0.75
+defusedxml==0.7.1
+entrypoints==0.4
+executing==0.8.3
+fastjsonschema==2.15.3
+filelock==3.7.1
+fire==0.4.0
+Flask==2.1.3
+Flask-WTF==1.0.1
+flaskr==1.0.0     
+flatbuffers==1.12
+gast==0.4.0
+gdown==4.5.1
+google-auth==2.9.1
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.47.0
+h11==0.13.0
+h5py==3.7.0
+idna==3.3
+ipykernel==6.13.0
+ipython==8.2.0
+ipython-genutils==0.2.0
+ipywidgets==7.7.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.1
+json5==0.9.9
+jsonschema==4.4.0
+jupyter==1.0.0
+jupyter-client==7.2.2
+jupyter-console==6.4.3
+jupyter-core==4.9.2
+jupyter-server==1.18.1
+jupyterlab==3.4.4
+jupyterlab-pygments==0.2.0
+jupyterlab-server==2.15.0
+jupyterlab-widgets==1.1.0
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+libclang==14.0.1
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+MouseInfo==0.1.3
+mtcnn==0.1.1
+nbclassic==0.4.3
+nbclient==0.5.13
+nbconvert==6.5.0
+nbformat==5.3.0
+nest-asyncio==1.5.5
+notebook==6.4.10
+notebook-shim==0.1.0
+numpy==1.22.3
+oauthlib==3.2.0
+opencv-python==4.5.5.64
+opt-einsum==3.3.0
+outcome==1.1.0
+packaging==21.3
+pandas==1.4.3
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.2.0
+pip==22.0.4
+prometheus-client==0.14.1
+prompt-toolkit==3.0.29
+protobuf==3.19.4
+psutil==5.9.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.53
+pycparser==2.21
+PyGetWindow==0.0.9
+Pygments==2.11.2
+PyMsgBox==1.0.9
+pyOpenSSL==22.0.0
+pyparsing==3.0.8
+pyperclip==1.8.2
+PyRect==0.2.0
+pyrsistent==0.18.1
+PyScreeze==0.1.28
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytweening==1.0.4
+pytz==2022.1
+pywin32==303
+pywinpty==2.0.5
+pyzmq==22.3.0
+qtconsole==5.3.0
+QtPy==2.0.1
+requests==2.27.1
+requests-oauthlib==1.3.1
+retina-face==0.0.12
+rsa==4.9
+selenium==4.1.3
+Send2Trash==1.8.0
+setuptools==58.1.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2
+stack-data==0.2.0
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-==0.26.0
+termcolor==1.1.0
+terminado==0.13.3
+tinycss2==1.1.1
+tornado==6.1
+tqdm==4.64.0
+traitlets==5.1.1
+trio==0.20.0
+trio-websocket==0.9.2
+typing_extensions==4.3.0
+urllib3==1.26.9
+wcwidth==0.2.5
+webdriver-manager==3.5.4
+webencodings==0.5.1
+websocket-client==1.3.3
+Werkzeug==2.1.2
+wheel==0.37.1
+widgetsnbextension==3.6.0
+wrapt==1.14.1
+wsproto==1.1.0
+WTForms==3.0.1
