--- a/requirements.txt
+++ b/requirements.txt
@@ -1,153 +1,140 @@
-absl-py==1.2.0
-anyio==3.6.1
+anyio==3.5.0
 argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
+argon2-cffi-==21.2.0
 asttokens==2.0.5
-astunparse==1.6.3
 async-generator==1.10
+atomicwrites==1.4.1
 attrs==21.4.0
-Babel==2.10.3
+Babel==2.9.1
 backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.0
-cachetools==5.2.0
+beautifulsoup4==4.10.0
+bleach==4.1.0
+cachelib==0.9.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
-chromedriver==2.24.1
-click==8.1.3
+click==8.1.2
 colorama==0.4.4
+coverage==6.4.2
 cryptography==36.0.2
+cs50==9.2.2
+cycler==0.11.0
+Cython==0.29.28
 debugpy==1.6.0
 decorator==5.1.1
-deepface==0.0.75
 defusedxml==0.7.1
+distlib==0.3.4
+docx2txt==0.8
 entrypoints==0.4
 executing==0.8.3
-fastjsonschema==2.15.3
-filelock==3.7.1
-fire==0.4.0
-Flask==2.1.3
+filelock==3.7.0
+Flask==2.1.1
+Flask-Session==0.4.0
 Flask-WTF==1.0.1
-flaskr==1.0.0     
-flatbuffers==1.12
-gast==0.4.0
-gdown==4.5.1
-google-auth==2.9.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.47.0
+flaskr==1.0.0    
+fonttools==4.33.3
+gensim==4.2.0
+greenlet==1.1.2
 h11==0.13.0
-h5py==3.7.0
+helpers==0.2.0
 idna==3.3
-ipykernel==6.13.0
-ipython==8.2.0
+iniconfig==1.1.1
+ipykernel==6.9.2
+ipython==8.1.1
 ipython-genutils==0.2.0
-ipywidgets==7.7.0
 itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.1
-json5==0.9.9
+joblib==1.1.0
+json5==0.9.6
 jsonschema==4.4.0
-jupyter==1.0.0
-jupyter-client==7.2.2
-jupyter-console==6.4.3
+jupyter-client==7.1.2
 jupyter-core==4.9.2
-jupyter-server==1.18.1
-jupyterlab==3.4.4
-jupyterlab-pygments==0.2.0
-jupyterlab-server==2.15.0
-jupyterlab-widgets==1.1.0
-keras==2.9.0
-Keras-Preprocessing==1.1.2
-libclang==14.0.1
-Markdown==3.4.1
+jupyter-server==1.15.6
+jupyterlab==3.3.2
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.11.2
+kafka-python==2.0.2
+kiwisolver==1.4.2
+lxml==4.6.5
 MarkupSafe==2.1.1
+matplotlib==3.5.2
 matplotlib-inline==0.1.3
 mistune==0.8.4
-MouseInfo==0.1.3
-mtcnn==0.1.1
-nbclassic==0.4.3
+mrjob==0.7.4
+nbclassic==0.3.7
 nbclient==0.5.13
-nbconvert==6.5.0
-nbformat==5.3.0
-nest-asyncio==1.5.5
+nbconvert==6.4.4
+nbformat==5.2.0
+nest-asyncio==1.5.4
+nltk==3.6.5
 notebook==6.4.10
 notebook-shim==0.1.0
-numpy==1.22.3
-oauthlib==3.2.0
-opencv-python==4.5.5.64
-opt-einsum==3.3.0
+numpy==1.21.4
 outcome==1.1.0
 packaging==21.3
-pandas==1.4.3
+pandas==1.3.4
 pandocfilters==1.5.0
 parso==0.8.3
 pickleshare==0.7.5
-Pillow==9.2.0
-pip==22.0.4
-prometheus-client==0.14.1
-prompt-toolkit==3.0.29
-protobuf==3.19.4
+Pillow==9.1.1
+pip==22.1.1
+platformdirs==2.5.2
+pluggy==1.0.0
+prometheus-client==0.13.1
+prompt-toolkit==3.0.28
 psutil==5.9.0
 pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAutoGUI==0.9.53
+py==1.11.0
+pybind11==2.8.1
 pycparser==2.21
-PyGetWindow==0.0.9
 Pygments==2.11.2
-PyMsgBox==1.0.9
 pyOpenSSL==22.0.0
-pyparsing==3.0.8
-pyperclip==1.8.2
-PyRect==0.2.0
+pyparsing==3.0.7
+PyPDF2==2.10.6
 pyrsistent==0.18.1
-PyScreeze==0.1.28
+pyserial==3.5
 PySocks==1.7.1
+pytest==7.1.2
 python-dateutil==2.8.2
-pytweening==1.0.4
 pytz==2022.1
 pywin32==303
 pywinpty==2.0.5
+PyYAML==6.0
 pyzmq==22.3.0
-qtconsole==5.3.0
-QtPy==2.0.1
+regex==2022.4.24
 requests==2.27.1
-requests-oauthlib==1.3.1
-retina-face==0.0.12
-rsa==4.9
+scikit-learn==1.0.1
+scipy==1.7.3
 selenium==4.1.3
 Send2Trash==1.8.0
-setuptools==58.1.0
+setuptools==62.3.2
 six==1.16.0
+smart-open==6.0.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
-soupsieve==2.3.2
+soupsieve==2.3.1
+SQLAlchemy==1.4.39
+sqlparse==0.4.2
 stack-data==0.2.0
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.1
-tensorflow-estimator==2.9.0
-tensorflow-io-gcs-==0.26.0
 termcolor==1.1.0
 terminado==0.13.3
-tinycss2==1.1.1
+testpath==0.6.0
+threadpoolctl==3.1.0
+tomli==2.0.1
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.1.1
 trio==0.20.0
 trio-websocket==0.9.2
-typing_extensions==4.3.0
+Unidecode==1.3.2
 urllib3==1.26.9
+virtualenv==20.14.1
 wcwidth==0.2.5
 webdriver-manager==3.5.4
 webencodings==0.5.1
-websocket-client==1.3.3
-Werkzeug==2.1.2
+websocket-client==1.3.1
+Werkzeug==2.1.1
 wheel==0.37.1
-widgetsnbextension==3.6.0
-wrapt==1.14.1
 wsproto==1.1.0
 WTForms==3.0.1
