--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MYSQL_USER=root
 MYSQL_PASSWORD=admin
 MYSQL_DB=SimiLabs
 UPLOAD_IMG="C:/Users/hanos/OneDrive/Desktop/"  
+UPLOAD_PDF = "C:/Users/hanos/OneDrive/Desktop/SimiLabs_2022/"
