--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ anyio==3.5.0
 argon2-cffi==21.3.0
 asttokens==2.0.5
 async-generator==1.10
+async-generator        
+async-timeout==4.0.2  
 atomicwrites==1.4.1
 attrs==21.4.0
 Babel==2.9.1
@@ -19,6 +21,7 @@ cryptography==36.0.2
 cs50==9.2.2
 cycler==0.11.0
 Cython==0.29.28
+dataframe-image==0.1.3
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
@@ -26,18 +29,21 @@ distlib==0.3.4
 docx2txt==0.8
 entrypoints==0.4
 executing==0.8.3
+faststylometry==0.5
 filelock==3.7.0
 Flask==2.1.1
 Flask-MySQLdb==1.0.1
 Flask-Session==0.4.0
 Flask-WTF==1.0.1
 flaskr==1.0.0    
+fpdf==1.7.2
 fonttools==4.33.3
 gensim==4.2.0
 greenlet==1.1.2
 h11==0.13.0
 helpers==0.2.0
 idna==3.3
+imgkit==1.2.2
 iniconfig==1.1.1
 ipykernel==6.9.2
 ipython==8.1.1
@@ -62,6 +68,9 @@ matplotlib==3.5.2
 matplotlib-inline==0.1.3
 mistune==0.8.4
 mrjob==0.7.4
+multidict==6.0.2
+mysql-connector-python==8.0.30
+mysqlclient==2.1.1
 nbclassic==0.3.7
 nbclient==0.5.13
 nbconvert==6.4.4
@@ -76,6 +85,7 @@ packaging==21.3
 pandas==1.3.4
 pandocfilters==1.5.0
 parso==0.8.3
+pdfkit==1.0.0
 pickleshare==0.7.5
 Pillow==9.1.1
 pip==22.1.1
@@ -97,6 +107,7 @@ pyserial==3.5
 PySocks==1.7.1
 pytest==7.1.2
 python-dateutil==2.8.2
+python-docx==0.8.11
 python-dotenv==0.21.0
 pytz==2022.1
 pywin32==303
@@ -140,3 +151,4 @@ wheel==0.37.1
 wordcloud==1.8.2.2
 wsproto==1.1.0
 WTForms==3.0.1
+yarl==1.8.1
